# Kifuwarabe_WCSC30

./: .gitignore  Cargo.toml  README.md  bug局面.kif  copy-dir-to-git.py  copy-to-git.py  log_kw-wcsc30.txt  テスト用position.txt
doc/: design.md  test.md
profile/: Engine.toml
src/: config.rs  main.rs  speed_of_light.rs
src/consoles/: asserts.rs  commands.rs  unit_test.rs
src/controller/: command.rs  io.rs  mod.rs
src/cosmic/: daydream.rs  daydream.rs.bak  mod.rs  playing.rs  playing.rs.bak  recording.rs  recording.rs.bak  toy_box.rs  universe.rs
src/entities/: mod.rs  move_.rs  movement.rs
src/genmove/: generate_move.rs
src/jotai/: ky.rs  number_board.rs  uchu.rs  uchu_impl.rs
src/kasetu/: atamakin.rs
src/law/: chart.rs  cryptographic.rs  diagnostic.rs  generate_move.rs  generate_move.rs.bak  mod.rs  piece_struct.rs  piece_type_struct.rs  speed_of_light.rs  usi.rs
src/meidai/: math_meidai.rs
src/model/: mod.rs  universe.rs
src/movegen/: check.rs  control.rs  generate_move.rs  mod.rs
src/position/: mod.rs  position.rs  rel_square.rs  rotation.rs  square.rs
src/record/: mod.rs
src/search/: evaluator.rs  mod.rs  move_ex.rs  search.rs
src/siko/: randommove.rs  think.rs
src/spaceship/: captain.rs  crew.rs  crew.rs.bak  equipment.rs  facility.rs  facility.rs.bak  mod.rs
src/syazo/: sasite_element.rs  sasite_seisei.rs  sasite_sentaku.rs
src/take1base/: mod.rs  piece.rs
src/teigi/: conv.rs  mod.rs  shogi_syugo.rs  shogi_syugo_seki.rs
src/tusin/: usi.rs
src/universe/: mod.rs  universe.rs
src/usi/: chiyuri.rs  kifuwarabe.rs  mod.rs  (+1 more)
(+344 files in other folders)
